@@ -13,8 +13,8 @@ WARNING: This section is ONLY for Fedora Core 6 (and possibly later versions,
         glib2 (used by libti*)
         qt (NOT qt4)
         qt-devel (for the Qt Assistant help file viewer)
-        kdelibs (obviously), version 3.5.2 or higher
-        kdebase (required for some features), version 3.5.2 or higher
+        kdelibs (obviously), version 3.5.7 or higher
+        kdebase (required for some features, should be the same version as kdelibs)
         ctags (to locate C functions/prototypes)
         These can be installed with:
         yum install glib2 qt-devel kdebase ctags
@@ -41,7 +41,7 @@ B. Installing KTIGCC from source
 1. Obtain and install the required prerequisites:
    glib2 (*)
    Qt 3 (*) (NOT Qt 4)
-   kdelibs from KDE 3, version 3.5.2 or higher (*) (NOT KDE 4, which is not even
+   kdelibs from KDE 3, version 3.5.7 or higher (*) (NOT KDE 4, which is not even
                                                     alpha at the time I'm
                                                     writing this)
    kdebase from KDE 3 (should be the same version as kdelibs)
