@@ -2,6 +2,7 @@ This is a summary of the changes in KTIGCC since the first alpha release:
 
 CVS ktigcc-1-branch (2007-07-02):
 
+* KDElibs 3.5.7 or higher are now required.
 * Ctrl+Return now works for "Open file at cursor" (not just Ctrl+Numpad Enter)
 * Fixed extra newline incorrectly added each time a file is saved.
 
